[package]
name = "minimint-wallet"
version = "0.1.0"
authors = ["elsirion <elsirion@protonmail.com>"]
edition = "2018"

[lib]
name = "minimint_wallet"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
native = ["tokio", "bitcoincore-rpc"]
default = []

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1"
bitcoin = { version = "0.28.1", features = [ "rand", "serde"] }
bitcoincore-rpc = {version = "0.15.0", optional = true}
hex = "0.4.3"
minimint-api = { path = "../../minimint-api" }
minimint-derive = { path = "../../minimint-derive" }
miniscript = { version = "7.0.0", features = [ "compiler", "use-serde" ] }
rand = "0.6.0"
rand_2 = {version = "0.8.0", package = "rand" }
secp256k1 = { version = "0.22.1", features = [ "serde" ] }
serde = { version = "1.0.118", features = [ "derive" ] }
thiserror = "1.0.23"
tokio = { version = "1.0.1", features = ["sync"], optional = true }
tracing ="0.1.22"
validator = { version = "0.13", features = ["derive"] }
# schnorr_fun = { path = "/home/nick/repos/secp256kfun/schnorr_fun", features = ["serde", "libsecp_compat"]}
schnorr_fun = { git = "https://github.com/nickfarrow/secp256kfun", rev = "15539324e55739394833e5663a1783b46c571e83", features = ["serde", "libsecp_compat"]}
sha2 = "0.9"


[dev-dependencies]
test-log = { version = "0.2", features = [ "trace" ], default-features = false }
tracing-subscriber = { version = "0.3.1", features = [ "env-filter" ] }
